--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -79,6 +79,18 @@
                     <label for="">Phone</label>
                     <input type="text" name="phone" id="" class="form-control" placeholder="" aria-describedby="helpId">
                   </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                      Cash on Delivery
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDisabled" id="flexRadioDisabled" disabled>
+                    <label class="form-check-label" for="flexRadioDisabled">
+                      Debit/Credit Card
+                    </label>
+                  </div>
 
                   <input type="submit" class="btn float-right btn-outline-info col-lg-6" value="Check out">
             </form>
